<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <artifactId>IPAFFS-Common-Schema</artifactId>
  <version>2.0.0-SNAPSHOT</version>
  <name>imports-notification-schema</name>
  <description>Shared Common Schema library for IPAFFS services</description>
  <packaging>pom</packaging>
  <groupId>uk.gov.defra.tracesx</groupId>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-dependencies</artifactId>
    <version>2.7.12</version>
  </parent>

  <properties>
    <project.scm.id>gitlab</project.scm.id>

    <java.version>17</java.version>
    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <checkstyle.version>10.8.1</checkstyle.version>
    <equalsverifier.version>2.4.8</equalsverifier.version>
    <git-build-hook-maven-plugin.version>3.3.0</git-build-hook-maven-plugin.version>
    <maven.checkstyle.version>3.2.1</maven.checkstyle.version>
    <maven.deploy.plugin.version>3.1.1</maven.deploy.plugin.version>
    <maven.help.plugin.version>3.4.0</maven.help.plugin.version>
    <maven.jar.plugin.version>3.3.0</maven.jar.plugin.version>
    <maven.release.plugin.version>2.5.3</maven.release.plugin.version>
    <maven-remote-resources-plugin.version>3.0.0</maven-remote-resources-plugin.version>
    <maven.versions.plugin.version>2.16.0</maven.versions.plugin.version>
    <shared-resources.version>1.0.0</shared-resources.version>
    <swagger.annotations.version>1.5.17</swagger.annotations.version>
  </properties>


  <modules>
    <module>imports-frontend-entities</module>
    <module>notification-schema-core</module>
    <module>notification-schema-java</module>
  </modules>

  <scm>
    <connection>scm:git:https://giteux.azure.defra.cloud/imports/imports-notification-schema.git
    </connection>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <snapshotRepository>
      <id>release</id>
      <name>Snapshots</name>
      <url>https://artifactoryv2.azure.defra.cloud/artifactory/maven-snapshots-local</url>
    </snapshotRepository>
    <repository>
      <id>release</id>
      <name>Releases</name>
      <url>${repo.releases.url}</url>
    </repository>
  </distributionManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>${swagger.annotations.version}</version>
      </dependency>
      <dependency>
        <groupId>nl.jqno.equalsverifier</groupId>
        <artifactId>equalsverifier</artifactId>
        <version>${equalsverifier.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>${maven.deploy.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven.jar.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-help-plugin</artifactId>
          <version>${maven.help.plugin.version}</version>
        </plugin>
        <plugin>
          <artifactId>maven-release-plugin</artifactId>
          <version>${maven.release.plugin.version}</version>
          <configuration>
            <autoVersionSubmodules>true</autoVersionSubmodules>
            <tagNameFormat>@{project.version}</tagNameFormat>
            <releaseProfiles>release</releaseProfiles>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>versions-maven-plugin</artifactId>
          <version>${maven.versions.plugin.version}</version>
        </plugin>
        <plugin>
          <groupId>com.rudikershaw.gitbuildhook</groupId>
          <artifactId>git-build-hook-maven-plugin</artifactId>
          <version>${git-build-hook-maven-plugin.version}</version>
          <configuration>
            <gitConfig>
              <core.hooksPath>hooks</core.hooksPath>
            </gitConfig>
          </configuration>
          <executions>
            <execution>
              <id>configure-git-hooks</id>
              <goals>
                <goal>configure</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>com.rudikershaw.gitbuildhook</groupId>
        <artifactId>git-build-hook-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>jenkins</id>
      <build>
        <plugins>
          <plugin>
            <groupId>com.rudikershaw.gitbuildhook</groupId>
            <artifactId>git-build-hook-maven-plugin</artifactId>
            <executions>
              <execution>
                <id>configure-git-hooks</id>
                <phase>none</phase>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
